maxlike_0.1-7

o  Allow maxlike to be calibrated with data.frames via arguments 
   x (data.frame with environmental conditions at presence point
   locations) and z (data.frame with environmental conditions at
   background locations).

o  New argument for function predict.maxlikeFit of newdata,
   allowing predictions from data.frames and via raster::predict  

maxlike_0.1-6

o  Make predict.maxlike work with formulas build from strings with as.formula.

maxlike_0.1-4

o  Fixed bug caused by deprication of layerNames() in raster package... again.


maxlike_0.1-3

o  Replaced deprecated is.real() with is.double()


maxlike_0.1-2

o  Fixed bug caused by deprication of layerNames() in raster package.
   Thanks to Michael Scroggie for the report.

o  Added link argument allowing for new cloglog link function

o  Added savedata argument

o  New unit tests


maxlike_0.1-1

o  Added predict method

o  Added fixed argument to fix parameters

o  Added option to removeDuplicates, as MAXENT does by default

