@@ -2,8 +2,8 @@ Package: maxlike
 Type: Package
 Title: Model Species Distributions by Estimating the Probability of
         Occurrence Using Presence-Only Data
-Version: 0.1-7
-Date: 2017-1-21
+Version: 0.1-8
+Date: 2019-11-27
 Depends: R (>= 2.10.0), raster
 Suggests: dismo
 Author: Richard Chandler, Andy Royle and Roeland Kindt
@@ -12,6 +12,6 @@ Description: Provides a likelihood-based approach to modeling species distributi
 License: GPL (>= 3)
 LazyLoad: yes
 NeedsCompilation: no
-Packaged: 2017-01-22 04:42:41 UTC; RKINDT
+Packaged: 2019-11-30 04:29:13 UTC; RKINDT
 Repository: CRAN
-Date/Publication: 2017-01-22 17:02:19
+Date/Publication: 2019-11-30 05:40:03 UTC
